--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-facebook": "^9.0.12",
+    "react-messenger-chat-plugin": "^3.0.5",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4"
   },
